Fix styling issues